# spanish-gender-debias

./: .example-env  .gitignore  README.md  pyproject.toml  requirements.txt  utils.py
data/: Gender_Bias_Split_Test_Val.ipynb
data/augmented/: annotated_data_0_1000.xlsx  annotated_data_10000_11000.xlsx  annotated_data_1000_2000.xlsx  annotated_data_11000_12000.xlsx  annotated_data_12000_13000.xlsx  annotated_data_13000_14000.xlsx  annotated_data_14000_15000.xlsx  annotated_data_15000_16000.xlsx  annotated_data_16000_17000.xlsx  annotated_data_2000_3000.xlsx  annotated_data_3000_4000.xlsx  annotated_data_4000_5000.xlsx  annotated_data_5000_6000.xlsx  annotated_data_6000_7000.xlsx  annotated_data_7000_8000.xlsx  annotated_data_8000_9000.xlsx  annotated_data_9000_10000.xlsx
data/processed/: 20230404_avisos_sample_2000.csv  20231210_test_data_labeled.csv  20231220_metrics_CAUSAL.csv  20231220_metrics_CAUSAL.xlsx  20231220_metrics_SEQ_2_SEQ.csv
data/raw/: sample_0_1000.xlsx  sample_10000_11000.xlsx  sample_1000_2000.xlsx  sample_12000_13000.xlsx  sample_13000_14000.xlsx  sample_14000_15000.xlsx  sample_15000_16000.xlsx  sample_17000_18000.xlsx  sample_19000_20000.xlsx  sample_20000_21000.xlsx  sample_2000_3000.xlsx  sample_21000_22000.xlsx  sample_23000_24000.xlsx  sample_6000_7000.xlsx  sample_8000_9000.xlsx  sample_9000_10000.xlsx
data/train_val_splits/: val_data.xlsx  val_judge.csv
debiasing/: configs.py
debiasing/llm/: agent.py  biases_example.txt  debiasing_example.txt  models.py  prompts.py  (+2 more)
models/: README.md
web/: api.py  env_example  index.html  model.py
(+38 files in other folders)
